[tool.poetry]
name = "project-dla"
version = "0.1.0"
description = ""
authors = ["dlameynardie <dominique.lameynardie@sewan.fr>"]

[tool.poetry.dependencies]
python = "^3.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
